--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h4>Hello, My Name Is</h4>
             <h1>Ajie <span>Aryo</span></h1>
             <h3>I'am a creative worker</h3>
-            <a href="#"><i class="far fa-user"></i> More About me</a>
+            <a href="https://ajiearyo25.wixsite.com/ajiemaker"><i class="far fa-user"></i> More About me</a>
         </div>
     </div>
   <section class="about" id="about">
@@ -41,7 +41,7 @@
                 my education is studying at the National Institute of Technology majoring in Visual Communication Design, 
                 for my background is a person who can be said to be ambitious and likes to explore, then passionate what 
                 I have is in creative fields such as design, animation, videography etc</p>
-                  <a href="#" class="button">Contact me</a>
+                  <a href="https://wa.me/6281323006359" class="button">Contact me</a>
         </div>
     </div>
   </section>
